[Correction] Copywrite text overlaping Fixed Again

--- a/static_resources/css/time_ui.css
+++ b/static_resources/css/time_ui.css
@@ -380,4 +380,6 @@ h1, h2, h3, h4, h5, h6, p {
       width: 100%;
       text-align: center;
       right: unset;
+      bottom: unset;
+      top: 96.5vh;
       font-size: 3vw; } }
